postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: voting-app
  labels:
    app: postgres
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: postgres
    tier: backend
